--- a/HikersGuide/css/main.css
+++ b/HikersGuide/css/main.css
@@ -160,5 +160,18 @@ img
 {
 	background: #1abc9c;
 }
-	
+
+button[type='submit'] {
+	display: block;
+	width: 100px;
+	height: 100px;
+	padding: 1rem;
+	background: #222222;
+	color: #f0f0f0;
+	border-radius: 3px;
+	text-transform: uppercase;
+	font-weight: 900;
+	cursor: pointer;
+	transition: all 0.5s;
+}	
 	
